--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Find bounding box dimensions either within or surrounding arbitrary containers",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/minijasminenode2 test.js --verbose"
+    "test": "./node_modules/.bin/minijasminenode2 test.js --verbose",
+    "lint": "./node_modules/.bin/jslint index.js && ./node_modules/.bin/jslint --sloppy --predef it --predef expect --predef describe --predef beforeEach test.js"
   },
   "keywords": [
     "bbox",
